@@ -14,26 +14,20 @@ public class CorsConfig {
     
     @Bean
     public CorsFilter corsFilter() {
-        System.out.println("✅ Configuring CORS Filter with x-user-id support...");
+        System.out.println("✅ Configuring CORS Filter with all required headers...");
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         
-        // Allow specific origins for production
-        config.setAllowedOrigins(Arrays.asList(
+        config.setAllowCredentials(true);
+        config.setAllowedOriginPatterns(List.of(
+            "http://localhost:*",
+            "https://*.github.io",
             "https://legal-swami.github.io",
-            "http://localhost:3000",
-            "https://legal-swami.github.io/legalswami"
+            "http://127.0.0.1:*"
         ));
         
-        // OR use patterns (choose one approach)
-        // config.setAllowedOriginPatterns(List.of(
-        //     "https://legal-swami.github.io",
-        //     "http://localhost:*",
-        //     "https://*.github.io"
-        // ));
-        
-        // ✅ FIX: Add x-user-id to allowed headers (both lowercase and uppercase)
+        // ✅ ADD ALL HEADERS YOUR FRONTEND SENDS
         config.setAllowedHeaders(Arrays.asList(
             "Origin", 
             "Content-Type", 
@@ -42,28 +36,29 @@ public class CorsConfig {
             "X-Requested-With", 
             "X-Auth-Token", 
             "X-API-Key",
-            "X-User-Id",    // Uppercase version
-            "x-user-id",    // Lowercase version (important!)
+            "X-User-Id",          // Uppercase
+            "x-user-id",          // Lowercase  
+            "x-request-id",       // ✅ ADD THIS - New error header
+            "X-Request-Id",       // ✅ Uppercase version
             "Access-Control-Request-Method",
-            "Access-Control-Request-Headers"
+            "Access-Control-Request-Headers",
+            "Cache-Control",
+            "Pragma"
         ));
         
         config.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
         ));
         
-        // ✅ FIX: Add x-user-id to exposed headers
         config.setExposedHeaders(Arrays.asList(
             "Authorization", 
             "X-Total-Count", 
             "X-Rate-Limit-Remaining",
             "X-User-Id",
-            "x-user-id"
+            "x-user-id",
+            "x-request-id",      // ✅ Expose this too
+            "X-Request-Id"
         ));
-        
-        // For CORS, allowCredentials should be false when using wildcard origins
-        // But since we're specifying exact origins, we can keep it true
-        config.setAllowCredentials(true);
         
         config.setMaxAge(3600L);
         
